OpenBurnBarCore/Sources/OpenBurnBarDomainCore/Generated/openburnbar_domain_ffiFFI.h

// ⚠️ Attention: If you change this #else block (ending in `#endif // def UNIFFI_SHARED_H`) you *must* ⚠️
// ⚠️ increment the version suffix in all instances of UNIFFI_SHARED_HEADER_V4 in this file.           ⚠️

typedef struct RustBuffer
{
    uint64_t capacity;
    uint64_t len;
    uint8_t *_Nullable data;
} RustBuffer;
typedef struct ForeignBytes
{
    int32_t len;
    const uint8_t *_Nullable data;
} ForeignBytes;
// Error definitions
typedef struct RustCallStatus {
    int8_t code;
    RustBuffer errorBuf;
} RustCallStatus;
typedef void (*UniffiRustFutureContinuationCallback)(uint64_t, int8_t
    );
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_resolve_aad(RustBuffer envelope_aad, RustBuffer context, int8_t reject_legacy, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_rewrap_document(RustBuffer request, RustBuffer old_key, RustBuffer new_key, RustBuffer new_vault_key_id, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search_analyze(RustBuffer text, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_sha256_hex(RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_subscription_doc_id(RustBuffer agent_uri, RustBuffer topic_id, RustBuffer key, RustCallStatus *_Nonnull out_status
);
void uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_validate_p256_x963_public_key(RustBuffer public_key, RustCallStatus *_Nonnull out_status
);
uint32_t uniffi_openburnbar_domain_ffi_fn_func_domain_core_abi_version(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_domain_core_source_fingerprint(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_domain_core_version(RustCallStatus *_Nonnull out_status

);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_gateway_relay_safety_code(RustBuffer agent_public_key, RustBuffer phone_public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_hkdf_sha256(RustBuffer input_key_material, RustBuffer salt, RustBuffer info, uint32_t output_byte_count, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_hmac_sha256(RustBuffer key, RustBuffer data, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_hpke_v3_info(RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v1(RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v2(RustBuffer aad, RustBuffer enc, RustBuffer recipient_public_key, RustBuffer sender_public_key, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_open_base64(RustBuffer ciphertext, RustBuffer key, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_open_combined(RustBuffer combined, RustBuffer key, RustBuffer aad, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_envelope_aad(RustBuffer associated_data, RustBuffer algorithm, RustBuffer session_id, RustBuffer sender_device_id, RustBuffer receiver_device_id, RustBuffer ratchet_public_key_base64, uint64_t version, uint64_t previous_chain_length, uint64_t message_number, uint64_t epoch, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_prekey_shared_secret(RustBuffer request, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_relay_aad(RustBuffer kind, RustBuffer arguments, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_base64(RustBuffer plaintext, RustBuffer key, RustBuffer aad, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_combined(RustBuffer plaintext, RustBuffer key, RustBuffer aad, RustBuffer nonce, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_hermes_sha256(RustBuffer bytes, RustCallStatus *_Nonnull out_status
);
int8_t uniffi_openburnbar_domain_ffi_fn_func_is_legacy_kimi_wire_event(RustBuffer provider, RustBuffer model, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_parse_anthropic_rate_limit_headers(RustBuffer payload, int64_t now_unix, RustBuffer shape, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_parse_claude_statusline_quota(RustBuffer payload, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_parse_codex_usage_quota(RustBuffer payload, int64_t now_unix, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_parse_cursor_usage_quota(RustBuffer payload, RustBuffer user_email, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed(RustBuffer text, uint32_t dimensions, int8_t is_query, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed_and_cloak(RustBuffer text, uint32_t dimensions, int8_t is_query, RustBuffer vault_key, RustBuffer model_version, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_pensieve_vector_cloak(RustBuffer vector, RustBuffer vault_key, RustBuffer model_version, RustCallStatus *_Nonnull out_status
);
RustBuffer uniffi_openburnbar_domain_ffi_fn_func_price_legacy_kimi_wire_event(RustBuffer buckets, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_openburnbar_domain_ffi_rustbuffer_alloc(uint64_t size, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_openburnbar_domain_ffi_rustbuffer_from_bytes(ForeignBytes bytes, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rustbuffer_free(RustBuffer buf, RustCallStatus *_Nonnull out_status
);
RustBuffer ffi_openburnbar_domain_ffi_rustbuffer_reserve(RustBuffer buf, uint64_t additional, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_u8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_u8(uint64_t handle
);
void ffi_openburnbar_domain_ffi_rust_future_free_u8(uint64_t handle
);
uint8_t ffi_openburnbar_domain_ffi_rust_future_complete_u8(uint64_t handle, RustCallStatus *_Nonnull out_status
);
void ffi_openburnbar_domain_ffi_rust_future_poll_i8(uint64_t handle, UniffiRustFutureContinuationCallback _Nonnull callback, uint64_t callback_data
);
void ffi_openburnbar_domain_ffi_rust_future_cancel_i8(uint64_t handle
);