tools/openburnbar-mcp/vendor/openburnbar-domain-core-python/openburnbar_domain_ffi.py

_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_resolve_aad.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_resolve_aad.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_rewrap_document.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_rewrap_document.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search_analyze.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_search_analyze.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_sha256_hex.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_sha256_hex.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_subscription_doc_id.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_subscription_doc_id.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_validate_p256_x963_public_key.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_cloud_vault_validate_p256_x963_public_key.restype = None
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_abi_version.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_abi_version.restype = ctypes.c_uint32
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_candidate_commit.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_candidate_commit.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_source_fingerprint.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_source_fingerprint.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_version.argtypes = (
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_domain_core_version.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_gateway_relay_safety_code.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_gateway_relay_safety_code.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hkdf_sha256.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hkdf_sha256.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hmac_sha256.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hmac_sha256.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hpke_v3_info.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_hpke_v3_info.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v1.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v1.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v2.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_key_wrap_info_v2.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_open_base64.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_open_base64.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_open_combined.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_open_combined.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_envelope_aad.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_envelope_aad.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_prekey_shared_secret.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_ratchet_prekey_shared_secret.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_relay_aad.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_relay_aad.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_base64.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_base64.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_combined.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_seal_combined.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_sha256.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_hermes_sha256.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_is_legacy_kimi_wire_event.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_is_legacy_kimi_wire_event.restype = ctypes.c_int8
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_anthropic_rate_limit_headers.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_int64,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_anthropic_rate_limit_headers.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_claude_statusline_quota.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_claude_statusline_quota.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_codex_usage_quota.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_int64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_codex_usage_quota.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_cursor_usage_quota.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_parse_cursor_usage_quota.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.c_int8,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed_and_cloak.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint32,
    ctypes.c_int8,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_deterministic_embed_and_cloak.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_l2_normalize.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_l2_normalize.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_vector_cloak.argtypes = (
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_pensieve_vector_cloak.restype = _UniffiRustBuffer
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_price_legacy_kimi_wire_event.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.uniffi_openburnbar_domain_ffi_fn_func_price_legacy_kimi_wire_event.restype = _UniffiRustBuffer
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_alloc.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_alloc.restype = _UniffiRustBuffer
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_from_bytes.argtypes = (
    _UniffiForeignBytes,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_from_bytes.restype = _UniffiRustBuffer
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_free.argtypes = (
    _UniffiRustBuffer,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_free.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_reserve.argtypes = (
    _UniffiRustBuffer,
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rustbuffer_reserve.restype = _UniffiRustBuffer
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_u8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_u8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u8.argtypes = (
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_free_u8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u8.argtypes = (
    ctypes.c_uint64,
    ctypes.POINTER(_UniffiRustCallStatus),
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_complete_u8.restype = ctypes.c_uint8
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i8.argtypes = (
    ctypes.c_uint64,
    _UNIFFI_RUST_FUTURE_CONTINUATION_CALLBACK,
    ctypes.c_uint64,
)
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_poll_i8.restype = None
_UniffiLib.ffi_openburnbar_domain_ffi_rust_future_cancel_i8.argtypes = (
